force-app/main/default/objects/SCC_Rekening_Koran__c/SCC_Rekening_Koran__c.object-meta.xml
<CustomObject>
    <label>Rekening Koran</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rekening Koran</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>