force-app/main/default/objects/SCC_Rekening_Koran__c/fields/SCC_auxtrc__c.field-meta.xml
<CustomField>
    <fullName>SCC_auxtrc__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>auxtrc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>