force-app/main/default/objects/SCC_Rekening_Koran__c/fields/SCC_Case__c.field-meta.xml
<CustomField>
    <fullName>SCC_Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>SCC_Submit_Rekening_Koran</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>