force-app/main/default/objects/SCC_Rekening_Koran__c/fields/SCC_GLSign__c.field-meta.xml
<CustomField>
    <fullName>SCC_GLSign__c</fullName>
    <label>GLSign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>