force-app/main/default/objects/SCC_Rekening_Koran__c/fields/SCC_ID_Number_3__c.field-meta.xml
<CustomField>
    <fullName>SCC_ID_Number_3__c</fullName>
    <label>ID Number 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>