force-app/main/default/objects/SCC_Rekening_Koran__c/fields/SCC_Jam_Trans__c.field-meta.xml
<CustomField>
    <fullName>SCC_Jam_Trans__c</fullName>
    <label>SCC Jam Trans</label>
    <length>255</length>
    <type>Text</type>
</CustomField>