force-app/main/default/objects/SCC_Rekening_Koran__c/fields/SCC_Jam_Transaksi__c.field-meta.xml
<CustomField>
    <fullName>SCC_Jam_Transaksi__c</fullName>
    <label>Jam Transaksi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>