force-app/main/default/objects/SCC_Rekening_Koran__c/fields/SCC_Kode_Transaksi__c.field-meta.xml
<CustomField>
    <fullName>SCC_Kode_Transaksi__c</fullName>
    <label>Kode Transaksi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>