force-app/main/default/objects/SCC_Rekening_Koran__c/fields/SCC_Mutasi_Debet__c.field-meta.xml
<CustomField>
    <fullName>SCC_Mutasi_Debet__c</fullName>
    <label>Mutasi Debet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>