force-app/main/default/objects/SCC_Rekening_Koran__c/fields/SCC_Nomor_Rekening__c.field-meta.xml
<CustomField>
    <fullName>SCC_Nomor_Rekening__c</fullName>
    <label>Nomor Rekening</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>