force-app/main/default/objects/SCC_Rekening_Koran__c/fields/SCC_Saldo_Akhir_Mutasi__c.field-meta.xml
<CustomField>
    <fullName>SCC_Saldo_Akhir_Mutasi__c</fullName>
    <label>Saldo Akhir Mutasi</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>