force-app/main/default/objects/SCC_Rekening_Koran__c/fields/SCC_Sequence__c.field-meta.xml
<CustomField>
    <fullName>SCC_Sequence__c</fullName>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>