force-app/main/default/objects/SCC_Rekening_Koran__c/fields/SCC_Serial__c.field-meta.xml
<CustomField>
    <fullName>SCC_Serial__c</fullName>
    <label>Serial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>