force-app/main/default/objects/SCC_Rekening_Koran__c/fields/SCC_Tanggal_Transaksi__c.field-meta.xml
<CustomField>
    <fullName>SCC_Tanggal_Transaksi__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tanggal Transaksi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>