force-app/main/default/objects/SCC_Rekening_Koran__c/fields/SCC_tblds1__c.field-meta.xml
<CustomField>
    <fullName>SCC_tblds1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>tblds1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>