force-app/main/default/objects/SCC_Rekening_Koran__c/fields/SCC_tblds2__c.field-meta.xml
<CustomField>
    <fullName>SCC_tblds2__c</fullName>
    <label>tblds2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>