force-app/main/default/objects/SCC_Rekening_Koran__c/fields/SCC_Terbilang__c.field-meta.xml
<CustomField>
    <fullName>SCC_Terbilang__c</fullName>
    <label>Terbilang</label>
    <length>255</length>
    <type>Text</type>
</CustomField>