force-app/main/default/objects/SCC_Rekening_Koran__c/fields/SCC_trremk__c.field-meta.xml
<CustomField>
    <fullName>SCC_trremk__c</fullName>
    <label>trremk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>