force-app/main/default/objects/SCC_Rekening_Koran__c/fields/SCC_Truser__c.field-meta.xml
<CustomField>
    <fullName>SCC_Truser__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Truser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>