force-app/main/default/objects/SCC_Rekening_Koran__c/fields/Tanggal_Transaksi__c.field-meta.xml
<CustomField>
    <fullName>Tanggal_Transaksi__c</fullName>
    <formula>LEFT( SCC_Tanggal_Transaksi__c , 10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tgl Transaksi</label>
    <type>Text</type>
</CustomField>